--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div>
         <py-script>
-            #python code goes here :)
+            <!--python code goes here-->
         </py-script>
     </div>
 </body>
